--- a/.github/workflows/deploy_multifib.yml
+++ b/.github/workflows/deploy_multifib.yml
@@ -63,8 +63,8 @@ jobs:
       with:
         aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        application_name: multifib
-        environment_name: Multifib-env
+        application_name: ssmultifib
+        environment_name: Ssmultifib-env
         version_label: zadanie2
         region: us-east-1
         deployment_package: deploy.zip
