--- a/.github/workflows/deploy_multifib.yml
+++ b/.github/workflows/deploy_multifib.yml
@@ -65,6 +65,6 @@ jobs:
         aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         application_name: ssmultifib
         environment_name: Ssmultifib-env
-        version_label: zadanie2
+        version_label: zadanie2.v2
         region: us-east-1
         deployment_package: deploy.zip
